# bkva

./: .editorconfig  .gitattributes  .gitmodules  README.md  demo.py  predict_classification.py  qodana.yaml  requirements.txt  setup.cfg  setup.py  test.py
BKVisionAlgorithms/: CONFIG.py  __init__.py
BKVisionAlgorithms/ai_benchmark_test/: ai_benchmark_test.py
BKVisionAlgorithms/base/: __init__.py  funcs.py  property.py
BKVisionAlgorithms/base/property/: __init__.py  adjust.py  director.py  loader.py  model.py  property.py  result.py
BKVisionAlgorithms/classification/: __init__.py  timm_frame.py
BKVisionAlgorithms/detection/: __init__.py  mmdet_frame.py  yolo_X.py  yolov5.py  yolov6.py  yolov8.py  yolov9.py
BKVisionAlgorithms/segmentation/: __init__.py  mmseg_frame.py
demo/classification/: test_resnet.yaml  test_vit_noisy_patch16.yaml
demo/classification_timm_test1/: config.yaml
demo/detection_mmdet_test/: HikCA-060-GM.yaml  config.yaml  rtmdet_tiny_8xb32-300e_coco_20220902_112414-78e30dcc.pth
demo/detection_yolov5_test1/: Steel_RZ.yaml  VOC.yaml  config.yaml
demo/detection_yolov8_test1/: base.yaml
demo/segmentation_mmseg_test1/: config.yaml  downloadModel.bat
docker/: Dockerfile
docs/: QuickStart.md
docs/predict/: BKVisionAlgorithms 使用文档0.1.docx  BKVisionAlgorithms 使用文档0.1.md
test/: at.py  classification_timm_test.py  detect_mmdet_test.py  detect_mmseg_test1.py  detect_yolov5_test.py  detect_yolov8_test.py  t_detect_yolov8.py  test_classification_timm.py  test_detect_mmdet.py  test_detect_yolov5.py
utils/server/: api_ai.py  v6.py
(+286 files in other folders)
